src/test/resources/public/input/typechecking/fail/incompatible_condition/fail11.jova
class Evaluation{
  private int c1;

  private int func1(){
    int a;
    bool b1;
    string f;

    if(f){
        a = 0;
    }

    return a;
  }
}

